[package]
name = "rustgrok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustgrok"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.13"
grok = "2.0"
pyo3 = { version = "0.18.1", features = ["hashbrown"] }
